--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -30,9 +30,9 @@
 
   .hero-title {
     font-size: 3.9rem;
-    font-weight: 530;
+    font-weight: 515;
     margin-bottom: 3.2rem;
-    text-align: left;
+    text-align: center;
 
     @include respond(tab-land) {
       font-size: 4rem;
