--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -21,7 +21,7 @@
   // If you want to set a background image on the hero section, uncomment these with your custom image
 
   background: url("/src/assets/georgie-cobbs-bKjHgo_Lbpo-unsplash.jpg");
-  background-position: center;
+  background-position: sticky;
   background-size: cover;
 
   @include respond(phone) {
