--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -3,7 +3,7 @@
   display: inline-block;
   text-align: center;
   justify-content: center;
-  position: relative;
+  position: absolute;
   padding: 0.8rem $default-font-size;
   font-weight: bold;
   line-height: 1;
