--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -2,8 +2,8 @@
 .cta-btn {
   display: inline-block;
   text-align: center;
-  justify-content: center;
-  position: absolute;
+  margin: auto;
+  position: relative;
   padding: 0.8rem $default-font-size;
   font-weight: bold;
   line-height: 1;
