--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -2,6 +2,7 @@
 .cta-btn {
   display: inline-block;
   text-align: center;
+  justify-content: left;
   margin: auto;
   position: relative;
   padding: 0.8rem $default-font-size;
