--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -16,11 +16,11 @@
   z-index: -1;
 
   // Set position sticky so the jumbotron stays fixed while you scroll.
-  // position: sticky;
+  position: sticky;
 
   // If you want to set a background image on the hero section, uncomment these with your custom image
 
-  background: url("/src/assets/growtika-9WnjxT1NCoY-unsplash.jpg");
+  background: url("/src/assets/anas-alshanti-feXpdV001o4-unsplash.jpg");
   background-position: center;
   background-size: cover;
 
