modified index, buttons & hero.scss

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,8 +1,7 @@
 /* Call to Action Button */
 .cta-btn {
   display: inline-block;
-  align-items: center;
-  margin: auto;
+  text-align: center;
   position: relative;
   padding: 0.8rem $default-font-size;
   font-weight: bold;
