--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -20,7 +20,7 @@
 
   // If you want to set a background image on the hero section, uncomment these with your custom image
 
-  background: url("/src/assets/anas-alshanti-feXpdV001o4-unsplash.jpg");
+  background: url("/src/assets/backgroundimage.jpeg");
   background-position: center;
   background-size: cover;
 
