--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -20,9 +20,28 @@
 
   // If you want to set a background image on the hero section, uncomment these with your custom image
 
-  background-clip: url("/src/assets/videospace.mp4");
   background-position: center;
   background-size: cover;
+
+  .back-video {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+
+  @media (min-aspect-ratio: 16/9){
+    .back-video{
+      width: 100%;
+      height: auto;
+    }
+  }
+  @media (max-aspect-ratio: 16/9){
+    .back-video{
+      width: auto;
+      height: 100%;
+    }
+  }
 
   @include respond(phone) {
     padding: 0rem $default-font-size;
