modified video bg

--- a/src/sass/sections/_hero.scss
+++ b/src/sass/sections/_hero.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   border-bottom: 0px;
-  background: $white-color;
+  // background: $white-color;
   font-weight: 400;
   color: $dark-blue-text;
   padding: 0rem 5.6rem;
@@ -20,6 +20,7 @@
 
   // If you want to set a background image on the hero section, uncomment these with your custom image
 
+  background-attachment: fixed;
   background-position: center;
   background-size: cover;
 
